my_drupal/traefik_config.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: drupal-buffering-middleware
  namespace: default
spec:
  buffering:
    # リクエストボディの最大サイズ (512MB)
    maxRequestBodyBytes: 536870912
    # メモリ上にキャッシュする最大サイズ (512MB)
    maxResponseBodyBytes: 536870912
