my_drupal/drupal-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-service
  labels:
    app: my-drupal
spec:
  ports:
    - port: 80 #9000
  selector:
    app: my-drupal
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-deployment
  labels:
    app: my-drupal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-drupal
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-drupal
        tier: backend
    spec:
      containers:
        - image: drupal:latest
          name: drupal
          ports:
            - containerPort: 80 #9000
          lifecycle:
            postStart:
              exec:
                command:
                  [
                    "/bin/bash",
                    "-c",
                    "cp /usr/local/etc/php/php.ini-production /usr/local/etc/php/php.ini",
                  ]
          volumeMounts:
            - name: drupal-data-persistent-storage
              mountPath: /var/www/html/sites
              subPath: data/sites
            - name: drupal-data-persistent-storage
              mountPath: /var/www/html/themes
              subPath: data/themes
            - name: drupal-data-persistent-storage
              mountPath: /var/www/html/modules
              subPath: data/modules
            - name: drupal-data-persistent-storage
              mountPath: /var/www/html/profiles
              subPath: data/profiles
            - name: drupal-php-config-ini
              mountPath: /usr/local/etc/php/conf.d/drupal-php-config.ini
              subPath: drupal-php-config.ini
          resources:
            limits:
              cpu: "500m"
              memory: 2Gi
            requests:
              cpu: "250m"
              memory: 1Gi
      volumes:
        - name: drupal-data-persistent-storage
          persistentVolumeClaim:
            claimName: drupal-data-pv-claim
        - name: drupal-php-config-ini
          configMap:
            name: drupal-php-config
# Drupal DB 更新
# drush updatedb
# drush cache:rebuild
