my_drupal/drupal_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-service
  labels:
    app: my-drupal
spec:
  ports:
    - port: 80 #9000
  selector:
    app: my-drupal
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-deployment
  labels:
    app: my-drupal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-drupal
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-drupal
        tier: backend
    spec:
      containers:
        - image: drupal:11.0.4
          name: drupal
          ports:
            - containerPort: 80 #9000
          volumeMounts:
            # - name: drupal-persistent-storage
            #   mountPath: /var/www/html
            #############################################
            - name: drupal-sites-persistent-storage
              mountPath: /var/www/html/sites
            - name: drupal-themes-persistent-storage
              mountPath: /var/www/html/themes
            - name: drupal-modules-persistent-storage
              mountPath: /var/www/html/modules
            - name: drupal-profiles-persistent-storage
              mountPath: /var/www/html/profiles
          resources:
            limits:
              cpu: 2
              memory: 6Gi
            requests:
              cpu: 1
              memory: 4Gi
      volumes:
        # - name: drupal-persistent-storage
        #   persistentVolumeClaim:
        #     claimName: drupal-pv-claim
        #############################################
        - name: drupal-sites-persistent-storage
          persistentVolumeClaim:
            claimName: drupal-sites-pv-claim
        - name: drupal-themes-persistent-storage
          persistentVolumeClaim:
            claimName: drupal-themes-pv-claim
        - name: drupal-modules-persistent-storage
          persistentVolumeClaim:
            claimName: drupal-modules-pv-claim
        - name: drupal-profiles-persistent-storage
          persistentVolumeClaim:
            claimName: drupal-profiles-pv-claim
