my_drupal/mariadb-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-mariadb-service
  labels:
    app: my-drupal
spec:
  ports:
    - port: 3306
  selector:
    app: my-drupal
    tier: db
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-mariadb-deployment
  labels:
    app: my-drupal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-drupal
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-drupal
        tier: db
    spec:
      containers:
        - image: mariadb:lts
          name: mariadb
          ports:
            - containerPort: 3306
              name: mariadb
          args:
            - --character-set-server=utf8
            - --collation-server=utf8_unicode_ci
          volumeMounts:
            - name: drupal-data-persistent-storage
              mountPath: /var/lib/mysql
              subPath: db
          resources:
            limits:
              cpu: "500m"
              memory: 1Gi
            requests:
              cpu: "250m"
              memory: 512Mi
      volumes:
        - name: drupal-data-persistent-storage
          persistentVolumeClaim:
            claimName: drupal-data-pv-claim
