my_drupal/nginx-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-nginx-service
  labels:
    app: my-drupal
spec:
  ports:
    - port: 80
  selector:
    app: my-drupal
    tier: prox-drupal
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-nginx-deployment
  labels:
    app: my-drupal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-drupal
      tier: prox-drupal
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-drupal
        tier: prox-drupal
    spec:
      containers:
        - image: nginx:1.27
          name: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: drupal-persistent-storage
              mountPath: /var/www/html
              # readOnly: true
            - name: drupal-nginx-config
              mountPath: /etc/nginx/conf.d/
          resources:
            limits:
              cpu: 2
              memory: 6Gi
            requests:
              cpu: 1
              memory: 4Gi
      volumes:
        - name: drupal-persistent-storage
          persistentVolumeClaim:
            claimName: drupal-pv-claim
        - name: drupal-nginx-config # volumeMountsで/etc/nginxにmountするやつ
          configMap:
            name: drupal-nginx-conf # ConfigMapのnginx-confを/etc/nginx以下に配置する
